<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3ECE8"
    tools:context=".DetailofCountry">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshSwipe2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/countryNameCard"
                android:layout_width="350dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:neumorph_shadowColorDark="#24a36f"
                app:neumorph_shapeType="pressed">

            </soup.neumorphism.NeumorphCardView>

            <TextView
                android:id="@+id/CountryDatac"
                android:layout_width="310dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text=""
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FF6464"
                android:textSize="40sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="@+id/countryNameCard"
                app:layout_constraintEnd_toEndOf="@+id/countryNameCard"
                app:layout_constraintStart_toStartOf="@+id/countryNameCard"
                app:layout_constraintTop_toTopOf="@+id/countryNameCard" />


            <soup.neumorphism.NeumorphCardView
                android:id="@+id/totalAndTodayCases"
                android:layout_width="350dp"
                android:layout_height="180dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.300"
                app:neumorph_shadowColorDark="#FFA1C9"
                app:neumorph_shapeType="flat">

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/totalAndTodayDeaths"
                android:layout_width="350dp"
                android:layout_height="180dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.490"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.64"
                app:neumorph_shadowColorDark="#FFA1C9"
                app:neumorph_shapeType="flat">

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/totalRecovered"
                android:layout_width="350dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.86"
                app:neumorph_shadowColorDark="#FFA1C9"
                app:neumorph_shapeType="flat">

            </soup.neumorphism.NeumorphCardView>

            <TextView
                android:id="@+id/CCases"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/totalCases"
                android:textAlignment="center"
                android:textColor="#334756"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/totalAndTodayCases"
                app:layout_constraintEnd_toEndOf="@+id/totalAndTodayCases"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="@+id/totalAndTodayCases"
                app:layout_constraintTop_toTopOf="@+id/totalAndTodayCases"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/totalDeaths"
                android:textAlignment="center"
                android:textColor="#3F3351"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/totalAndTodayDeaths"
                app:layout_constraintEnd_toEndOf="@+id/totalAndTodayDeaths"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/totalAndTodayDeaths"
                app:layout_constraintTop_toTopOf="@+id/totalAndTodayDeaths"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/CDeaths"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/totalDeaths"
                android:textAlignment="center"
                android:textColor="#334756"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/totalAndTodayDeaths"
                app:layout_constraintEnd_toEndOf="@+id/totalAndTodayDeaths"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="@+id/totalAndTodayDeaths"
                app:layout_constraintTop_toTopOf="@+id/totalAndTodayDeaths"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/td"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/todayCases"
                android:textAlignment="center"
                android:textColor="#3F3351"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/totalAndTodayCases"
                app:layout_constraintEnd_toEndOf="@+id/totalAndTodayCases"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/totalAndTodayCases"
                app:layout_constraintTop_toTopOf="@+id/totalAndTodayCases"
                app:layout_constraintVertical_bias="0.75" />

            <TextView
                android:id="@+id/Tc"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/todayCases"
                android:textAlignment="center"
                android:textColor="#334756"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/totalAndTodayCases"
                app:layout_constraintEnd_toEndOf="@+id/totalAndTodayCases"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="@+id/totalAndTodayCases"
                app:layout_constraintTop_toTopOf="@+id/totalAndTodayCases"
                app:layout_constraintVertical_bias="0.75" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/todayDeaths"
                android:textAlignment="center"
                android:textColor="#3F3351"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/totalAndTodayDeaths"
                app:layout_constraintEnd_toEndOf="@+id/totalAndTodayDeaths"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/totalAndTodayDeaths"
                app:layout_constraintTop_toTopOf="@+id/totalAndTodayDeaths"
                app:layout_constraintVertical_bias="0.75" />

            <TextView
                android:id="@+id/Td"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/todayDeaths"
                android:textAlignment="center"
                android:textColor="#334756"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/totalAndTodayDeaths"
                app:layout_constraintEnd_toEndOf="@+id/totalAndTodayDeaths"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="@+id/totalAndTodayDeaths"
                app:layout_constraintTop_toTopOf="@+id/totalAndTodayDeaths"
                app:layout_constraintVertical_bias="0.75" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/totalCases"
                android:textAlignment="center"
                android:textColor="#3F3351"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/totalAndTodayCases"
                app:layout_constraintEnd_toEndOf="@+id/totalAndTodayCases"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/totalAndTodayCases"
                app:layout_constraintTop_toTopOf="@+id/totalAndTodayCases"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/totalRecovered"
                android:textAlignment="center"
                android:textColor="#3F3351"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/totalRecovered"
                app:layout_constraintEnd_toEndOf="@+id/totalRecovered"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/totalRecovered"
                app:layout_constraintTop_toTopOf="@+id/totalRecovered" />

            <TextView
                android:id="@+id/CRecover"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/totalRecovered"
                android:textAlignment="center"
                android:textColor="#334756"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/totalRecovered"
                app:layout_constraintEnd_toEndOf="@+id/totalRecovered"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="@+id/totalRecovered"
                app:layout_constraintTop_toTopOf="@+id/totalRecovered" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>